
    HDFS-9129. Move the safemode block count into BlockManager. (Mingliang Liu
    via jing9)

    HDFS-9281. Change TestDeleteBlockPool to not explicitly use File to check
    block pool existence. (lei)

    HDFS-9371. Code cleanup for DatanodeManager. (jing9)

    HDFS-9300. TestDirectoryScanner.testThrottle() is still a little flakey.
    (Daniel Templeton via wang)

  OPTIMIZATIONS

  BUG FIXES

Release 2.8.0 - UNRELEASED

  NEW FEATURES

    HDFS-7891. A block placement policy with best rack failure tolerance.
    (Walter Su via szetszwo)

    HDFS-8131. Implement a space balanced block placement policy (Liu Shaohui
    via kihwal)

    HDFS-8155. Support OAuth2 in WebHDFS. (jghoman)

    HDFS-9184. Logging HDFS operation's caller context into audit logs.
    (Mingliang Liu via jitendra)

  IMPROVEMENTS

    HDFS-9257. improve error message for "Absolute path required" in INode.java
    to contain the rejected path (Marcell Szabo via harsh)

    HDFS-2390. dfsadmin -setBalancerBandwidth does not validate -ve value
    (Gautam Gopalakrishnan via harsh)

    HDFS-8821. Explain message "Operation category X is not supported
    in state standby" (Gautam Gopalakrishnan via harsh)

    HDFS-3918. EditLogTailer shouldn't log WARN when other node
    is in standby mode (todd via harsh)

    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

    HDFS-7875. Improve log message when wrong value configured for
    dfs.datanode.failed.volumes.tolerated.
    (nijel via harsh)

    HDFS-2360. Ugly stacktrace when quota exceeds. (harsh)

    HDFS-7835. make initial sleeptime in locateFollowingBlock configurable for
    DFSClient. (Zhihai Xu via Yongjun Zhang)

    HDFS-7829. Code clean up for LocatedBlock. (Takanobu Asanuma via jing9)

    HDFS-7854. Separate class DataStreamer out of DFSOutputStream. (Li Bo via
    jing9)

    HDFS-7713. Implement mkdirs in the HDFS Web UI. (Ravi Prakash via wheat9)
